🐛 (ux) Redirect to actual 404 page

--- a/pages/404.html
+++ b/pages/404.html
@@ -4,7 +4,7 @@ permalink: '404.html'
 
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='/en'" />
+    <meta http-equiv="refresh" content="0; URL='/en/404'" />
     <style>
       body,
       a {
