--- a/pages/_generated/offline.html
+++ b/pages/_generated/offline.html
@@ -9,7 +9,7 @@ hideNewsletter: true
 ---
 
 {% from 'search-box.html' import searchBox %}
-<div class="warpper wrapper--full-bleed wrapper--padded wrapper--padding wrapper--full-circles">
+<div class="wrapper wrapper--full-bleed wrapper--padded wrapper--padding wrapper--full-circles">
   <div class="page-not-found">
     <h1 class="type--h1">{{l10n.offline.title}}</h1>
     <p class="type--h3 page-not-found__title">{{l10n.offline.desc}}</p>
