🚧 (code) Migrate all config here
Removes static-site-scaffold module indirection for eleventy config, migrates to newly build
submodules for that, upgrades to Node 14, and resolves 11ty build errors

Site now also builds in ~11s. I think that can still come down

--- a/pages/_generated/components.html
+++ b/pages/_generated/components.html
@@ -43,7 +43,7 @@ permalink: '{{ l10n.locale.code | slug }}/style-guide/components/index.html'
             <dd><a href="{{docs.url}}">{{docs.fileSlug}}</a></dd>
             {% elseif info.docs is defined %}
             <dt>{{l10n.microcopy.styleGuide.docs}}</dt>
-            <dd>{% highlight "json" %}{{info.docs | safe}}{% endhighlight %}</dd>
+            <dd>{% highlight "js" %}{{info.docs | safe}}{% endhighlight %}</dd>
             {% endif %}
           </dl>
         </div>
